# kokoro-speakd

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  client.py  cliff.toml  daemon.py  flake.nix  markdown.py  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  dependabot.yml  og-card.html  pull_request_template.md  scorecard-config.yml
.github/workflows/: ci.yml  codeql.yml  mypy.yml  no-ai-slips.yml  osv-scan.yml  release.yml  scorecard.yml  sonar.yml
docs/assets/: kokoro-demo.cast
scripts/: marketing-apply-repo-metadata.sh
tests/: test_markdown.py
