[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kokoro-speakd"
version = "0.0.1"
description = "Persistent Kokoro TTS daemon for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Pedro H S Balbino", email = "pedrohba1@gmail.com" }]

dependencies = [
  "torch>=2.0",
  "onnxruntime>=1.16",
]

[project.urls]
Homepage = "https://github.com/yolo-labz/kokoro-speakd"
Repository = "https://github.com/yolo-labz/kokoro-speakd"
Issues = "https://github.com/yolo-labz/kokoro-speakd/issues"

[project.optional-dependencies]
gpu = ["onnxruntime-gpu"]

[project.scripts]
kokoro-speakd = "daemon:main"
kokoro-speak = "client:main"

[tool.hatch.build.targets.wheel]
include = ["client.py", "daemon.py", "markdown.py"]

[tool.hatch.build.targets.sdist]
include = ["client.py", "daemon.py", "markdown.py", "pyproject.toml", "README.md", "LICENSE"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
